--- a/templates/ume.html
+++ b/templates/ume.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="robots" content="noindex,nofollow">
-    <title>勉強に集中したい！勉強への集中力をアップする方法とは？</title>
+    <title>連番を簡単に作成！</title>
     <link rel="icon" href="/img/logo/favicon.ico">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" />
